--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -5,7 +5,7 @@
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
       <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/shell-novice/">Automating Tasks with the Unix Shell</a></td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td><td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Building Programs with Python</td> </tr>
+      <tr> <td>13:30</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Building Programs with Python</a></td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
@@ -15,7 +15,7 @@
       <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
       <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/git-novice/">Version Control with Git</a></td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td><td><a href="https://swcarpentry.github.io/python-novice-inflammation/07-cond.html">Building Programs with Python Continuation</td> </tr>
+      <tr> <td>13:30</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/07-cond.html">Building Programs with Python Continuation</a></td> </tr>
       <tr> <td>17:00</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
