--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -14,7 +14,7 @@
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/git-novice/">Version Control with Git</a></td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/07-cond.html">Building Programs with Python Continuation</a></td> </tr>
+      <tr> <td>13:30</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/07-cond.html">Continuation: Building Programs with Python</a></td> </tr>
       <tr> <td>17:00</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
       <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
